--- a/views/user.ejs
+++ b/views/user.ejs
@@ -40,7 +40,7 @@
                         </a>
                     </div>
                     <div class="admin-log-out">
-                        <a href="logout" class="link-log-out">Đăng xuất</a>
+                        <a href="/logout" class="link-log-out">Đăng xuất</a>
                     </div>
                 </div>
             </div>
