--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -105,7 +105,7 @@ $color_primary_b: #08974b;
 .container-user {
     position: fixed;
     background-color: #fff;
-    right: -120px;
+    right: -140px;
     top: 85px;
     transition: 0.2s;
     z-index: 2;
@@ -113,7 +113,7 @@ $color_primary_b: #08974b;
     .box-user {
         position: relative;
         padding: 12px 8px;
-        width: 110px;
+        width: 130px;
         border-radius: 0 0 0 15px;
         box-shadow: 0 2px 5px #000026;
 
@@ -385,11 +385,10 @@ $color_primary_b: #08974b;
                     border: 1px solid #dadada;
                     display: flex;
                     flex-wrap: wrap;
-                    justify-content: space-between;
                     .box-item {
-                        width: 20%;
-                        padding: 20px;
+                        width: 25%;
                         .box-item-link {
+                            padding: 20px;
                             display: block;
                             overflow: hidden;
                             border-radius: 15px;
@@ -639,6 +638,154 @@ $color_primary_b: #08974b;
                     transform: translateY(-2px);
                 }
             }
+        }
+        .btn-add-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 140px;
+            background-color: #ffffff00;
+            border: none;
+            cursor: pointer;
+            margin: 0 auto;
+            .fa {
+                width: 25px;
+                height: 25px;
+                line-height: 25px;
+                color: #56AB2F;
+                border-radius: 50%;
+                border: 3px solid #56AB2F;
+                background-color: #fff;
+                font-size: 18px;
+                transition: 0.2s;
+                text-align: center;
+            }
+            .title-btn {
+                color: #56AB2F;
+                padding: 8px 0;
+                position: relative;
+                font-size: 14px;
+                &::after {
+                    position: absolute;
+                    content: '';
+                    display: block;
+                    height: 2px;
+                    width: 0%;
+                    background-color: #56AB2F;
+                    bottom: 0;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    transition: 0.2s;
+                }
+            }
+            &:hover {
+                .fa {
+                    background-color: #56AB2F;
+                    color: #fff;
+                }
+                .title-btn {
+                    &::after {
+                        width: 100%;
+                    }
+                }
+            }
+        }
+        .box-add-item {
+            opacity: 0;
+            width: 0;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            transition: 0.2s;
+            transform: translate(-50%, -50%);
+            box-shadow: 0px 0px 5px #000026;
+            background-color: #fff;
+            z-index: 2;
+            border-radius: 5px;
+            padding: 0;
+            .box-container-add-item {
+                width: 100%;
+                height: 300px;
+                overflow: hidden;
+                transition: 0.2s;
+                position: relative;
+                form {
+                    .detail-item {
+                        overflow-y: scroll;
+                        height: 180px;
+                    }
+                    .detail {
+                        padding: 4px 0;
+                        label {
+                            display: flex;
+                            input {
+                                display: none;
+                            }
+                            input:checked ~ span {
+                                background-color: #56AB2F;
+                            }
+                            span {
+                                width: 100%;
+                                display: block;
+                                padding: 4px 0;
+                                text-align: center;
+                                background-color: #A8E063;
+                                color: #fff;
+                                cursor: pointer;
+                                transition: 0.2s;
+                                overflow: hidden;
+                                text-overflow: ellipsis;
+                                white-space: nowrap;
+                            }
+                        } 
+                    }
+                    .btn-submit {
+                        width: 150px;
+                        display: block;
+                        text-align: center;
+                        padding: 12px;
+                        border-radius: 5px;
+                        border: none;
+                        margin: 16px auto;
+                        background-color: #A8E063;
+                        color: #fff;
+                        transition: 0.2s;
+                        cursor: pointer;
+                        font-size: 18px;
+                        font-weight: bolder;
+                        &:hover {
+                            background-color: #56AB2F;
+                        }
+                    }
+                }
+                .close {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 30px;
+                    padding: 8px;
+                    border: none;
+                    transition: 0.2s;
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    transition: 0.2s;
+                    border-radius: 50%;
+                    border: 2px solid #ff0000;
+                    color: #ff0000;
+                    cursor: pointer;
+                    background-color: #fff;
+                    &:hover {
+                        background-color: #ff0000;
+                        color: #fff;
+                    }
+                }
+            }
+        }
+        .display {
+            opacity: 1;
+            width: 40%;
+            padding: 12px 16px;
         }
     }
     .form-box-detail {
